# coros-to-sqlite

./: .gitignore  pyproject.toml
coros_to_sqlite/: cli.py  coros.py
